--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
       with:
-        fetch-depth: 0 # Ensure full history is fetched to avoid shallow clone issues
+        fetch-depth: 0 # Đảm bảo toàn bộ lịch sử git được lấy về
 
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
